<resources>
    <string name="app_name">咿呀</string>
    <string name="yiya_code">咿呀号</string>
    <string name="yiya_code_hint">请输入您的咿呀号</string>
    <string name="pass_word">密码：</string>
    <string name="pass_word_hint">请输入密码</string>
    <string name="yiya_login">登陆</string>
    <string name="yaya_register">注册</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roster_send_message">发消息</string>
    <string name="roster_tv_address_label">地区</string>
    <string name="roster_video_message">视频通话</string>
    <string name="chat_send">发送</string>
    <string name="roster_tv_signature">个性签名</string>
    <string name="search_user_not_exist">该用户不存在</string>
    <string name="search_search">搜索：</string>
    <string name="search_cancel">取消</string>
    <string name="main_menu_add_friend">添加朋友</string>
    <string name="main_menu_launch_muc">发起群聊</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_roster">通讯录</string>
    <string name="main_tab_discovery">发现</string>
    <string name="main_tab_self">我</string>
    <string name="vcard_add_to_roster">添加到通讯录</string>
    <string name="subscriber_accepted">已添加</string>
    <string name="subscriber_accept">接受</string>
</resources>
