<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_et_search_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/search_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_cancel"/>

    </LinearLayout>

    <Button
        android:id="@+id/search_btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_search"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/search_tv_not_exist"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/search_user_not_exist"/>

</LinearLayout>
