<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/roster_iv_photo"
            android:layout_width="@dimen/roster_photo_width"
            android:layout_height="@dimen/roster_photo_height" />

        <TextView
            android:id="@+id/roster_tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/roster_iv_photo"
            android:layout_toRightOf="@id/roster_iv_photo" />

        <TextView
            android:id="@+id/roster_tv_yiya_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/roster_iv_photo"
            android:layout_toEndOf="@id/roster_iv_photo"
            android:layout_below="@id/roster_tv_nick_name" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roster_tv_address_label" />

            <TextView
                android:id="@+id/roster_tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roster_tv_signature"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/vcard_btn_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roster_send_message" />

    <Button
        android:id="@+id/vcard_btn_video_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roster_video_message" />

</LinearLayout>
